feat: add authentication

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "yauhenibelski-jsfe2023q4",
     "version": "1.0.0",
-    "description": "async-race",
+    "description": "fun-chat",
     "main": "index.ts",
     "author": "Yauheni Belski",
     "license": "ISC",
